# advent-of-code-python

./: .gitignore  .pre-commit-config.yaml  bootstrap_day.sh  pyproject.toml  pytest.ini  watch.sh
aoc/: __main__.py  solver.py  util.py
aoc/years/y2017/day01/: solver.py  test_solver.py
aoc/years/y2017/day02/: solver.py  test_solver.py
aoc/years/y2017/day03/: solver.py  test_solver.py
aoc/years/y2017/day04/: solver.py  test_solver.py
aoc/years/y2017/day05/: solver.py  test_solver.py
aoc/years/y2025/day01/: solver.py  test_solver.py
aoc/years/y2025/day02/: solver.py  test_solver.py
aoc/years/y2025/day03/: solver.py  test_solver.py
aoc/years/y2025/day04/: solver.py  test_solver.py
aoc/years/y2025/day05/: solver.py  test_solver.py
aoc/years/y2025/day06/: solver.py  test_solver.py
aoc/years/y2025/day07/: solver.py  test_solver.py
aoc/years/y2025/day08/: solver.py  test_solver.py
